GH-71 Update of projects.
