# pva.SuperV.Model/Projects/UpdateProjectRequest.cs
@@ -3,10 +3,9 @@ using System.Diagnostics.CodeAnalysis;
 
 namespace pva.SuperV.Model.Projects
 {
-    [Description("Project creation request.")]
+    [Description("Project update request.")]
     [ExcludeFromCodeCoverage]
-    public record CreateProjectRequest(
-        [property: Description("Name of project")] string Name,
+    public record UpdateProjectRequest(
         [property: Description("Description of project")] string Description,
         [property: Description("Connection string to history storage")] string? HistoryStorageConnectionString = null)
     {
